# rusttracer

./: Cargo.toml  README.md  bounds.rs  build.rs  camera.rs  canvas.rs  colors.rs  cones.rs  csg.rs  cubes.rs  cylinders.rs  gpu.rs  groups.rs  intersections.rs  lights.rs  main.rs  materials.rs  matrices.rs  obj_parser.rs  patterns.rs  planes.rs  rays.rs  shapes.rs  spheres.rs  texture_maps.rs  transformations.rs  tuples.rs  viewport.rs  worlds.rs
gpu/: README.md
gpu/shader/: Cargo.toml  rust-toolchain.toml
gpu/shader/src/: lib.rs
gpu/spv/: manifest.json  raycore_shader.spv
raycore/: Cargo.toml
raycore/src/: bounds.rs  cones.rs  csg.rs  cubes.rs  cylinders.rs  groups.rs  intersections.rs  lib.rs  lights.rs  materials.rs  matrices.rs  patterns.rs  planes.rs  rays.rs  render.rs  shapes.rs  spheres.rs  texture_maps.rs  triangles.rs  tuples.rs  worlds.rs
