[package]
name = "raycore"
version = "0.1.0"
edition = "2021"

# The shared ray-tracing core: f32 math + the renderer. Single source of truth
# used by the CPU host (the `rusttracer` binary) and, after Stage 3, compiled to
# SPIR-V by the rust-gpu shader crate. Kept dependency-light on purpose so it can
# go `no_std` for the GPU target in Stage 2.
[lib]
path = "src/lib.rs"

[features]
# `std` (default) builds the CPU host renderer: the Vec-based `World`, scene
# building (groups/CSG/BVH/OBJ), and inherent f32 math. Disable it for the GPU:
# `--no-default-features` compiles only the no_std, heap-free core (Scene + the
# trace path + math + flat data types), which is what rust-gpu turns into SPIR-V.
default = ["std"]
std = []

[dependencies]
# f32 transcendental/rounding math for the no_std build (sqrt, powi, sin, atan2,
# floor, ...). On std builds the inherent f32 methods shadow these, so behavior
# is identical; in no_std the `Float` trait routes them through libm.
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
libm = "0.2"
