[package]
name = "raycore"
version = "0.1.0"
edition = "2021"

# The shared ray-tracing core: f32 math + the renderer. Single source of truth
# used by the CPU host (the `rusttracer` binary) and, after Stage 3, compiled to
# SPIR-V by the rust-gpu shader crate. Kept dependency-light on purpose so it can
# go `no_std` for the GPU target in Stage 2.
[lib]
path = "src/lib.rs"

# The f32 `Float` math source is chosen by FEATURE, not target-cfg: rust-gpu's
# custom SPIR-V target makes Cargo's `[target.'cfg(...)']` evaluation unreliable,
# so we let the depending crate pick deterministically.
#  - `cpu-math` (in default): num-traits backed by libm. The CPU host + the
#    `--no-default-features --features cpu-math` no_std check use this. (On std
#    builds the inherent f32 methods shadow the trait anyway.)
#  - `gpu`: spirv-std, whose `num_traits::Float` is backed by SPIR-V intrinsics.
#    libm CANNOT compile under the rust-gpu codegen backend, so the shader crate
#    builds raycore with `default-features = false, features = ["gpu"]`.
# Exactly one of cpu-math / gpu must be enabled.
[features]
default = ["std", "cpu-math"]
std = []
cpu-math = ["dep:num-traits"]
gpu = ["dep:spirv-std"]

[dependencies]
# Brings libm transitively via its own `libm` feature (CPU/no_std path only).
num-traits = { version = "0.2", default-features = false, features = ["libm"], optional = true }
# Provides Float via GPU intrinsics on the SPIR-V target. Pin to your rust-gpu.
spirv-std = { version = "0.9", optional = true }
